# GemAssist

./: .env.example  .replit  Dockerfile  README.md  TESTING_INSTRUCTIONS.md  app.py  autodebug.sh  firestore.rules  gem_notion_client.py  gem_telegram_workflows.py  index.js  media_server.py  models.py  notion_cms.py  notion_content_sync.py  package-lock.json  package.json  pyproject.toml  replit.md  rss_aggregator.py  server-media.js  telegram_bot_handler.py
.github/workflows/: deploy.yml
attached_assets/: Pasted-TASK-Set-up-Free-Enterprise-Grade-Website-Workflow-CONTEXT-We-are-building-an-enterprise-style-AI-1758804177142_1758804177143.txt  certificate_1754365177771.pem  compliance_view_1754365177772.html  story_1754365177772.html  team_1754365177772.html
attached_assets/Gem-Enterprises-ex/: .replit  package-lock.json  package.json  pyproject.toml
attached_assets/Gem-Enterprises-ex/client/: index.html
dataconnect/: dataconnect.yaml
functions/: package-lock.json
gem-assist-core/: package-lock.json
static/cache/: notion_content.json
static/css/: ai-support.css  animations.css  modern-enterprise.css  style.css
static/js/: ai-support.js  animations.js  main.js  modern-enterprise.js  notion-cms.js  sidebar-media.js
templates/: admin.html  admin_vip_board.html  base.html  contact.html  index.html  leadership.html  notion_setup.html  sidebar-media.html  teams.html  telegram.html  testimonials.html  vip_board.html
